# protein-benchmark

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py  setup.sh
pkg/util/: cache.py  plotting.py
pkg/util/extract/: pdb_extract.py
pkg/util/io/: cif_convert.py  io.py  pdb.py
pkg/util/samples/: negative_control.py
protein-benchmark/util/: boltz_interface.py  data_utility.py  dockq_utility.py
protein-benchmark/util/extract/: csv_extract.py
protein-benchmark/util/io/: entries.py  fasta.py  yaml_parse.py
protein-benchmark/util/samples/: alanine_swap.py  date_filter.py  epitope_specification.py
protein_benchmark/: cache.py  data_utility.py
protein_benchmark/extract/: csv_extract.py  pdb_extract.py
protein_benchmark/interface/: dockq_utility.py
protein_benchmark/io/: fasta.py  io.py  json.py  pdb.py  yaml_parse.py
protein_benchmark/query/: rcsbapi.py
protein_benchmark/samples/: alanine_swap.py  epitope_specification.py  negative_control.py  templates.py
scripts/helpers/: build_fastas.py
scripts/notebooks/categorized/: notebook_chain_templates.ipynb  notebook_chain_templates_single.ipynb
scripts/notebooks/main/: notebook_input-generation.ipynb  notebook_output-benchmarking.ipynb
scripts/notebooks/old/: notebook_analine_swap.ipynb  notebook_epitope_specification.ipynb
scripts/slurm/: job.sh  job_20_samples_no_template copy.sh  job_20_samples_with_template.sh  job_full_100_diffusion_fv.sh  job_full_100_diffusion_vhhs.sh  job_test_epitopes.sh  negative_control_sample.sh  slurm-2216.out  vanilla_msa_boltz2_speed.log.txt
